@@ -1,21 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<!--
- ~  Copyright 2018 Red Hat, Inc.
- ~
- ~  Licensed under the Apache License, Version 2.0 (the "License");
- ~  you may not use this file except in compliance with the License.
- ~  You may obtain a copy of the License at
- ~
- ~    http://www.apache.org/licenses/LICENSE-2.0
- ~
- ~  Unless required by applicable law or agreed to in writing, software
- ~  distributed under the License is distributed on an "AS IS" BASIS,
- ~  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
- ~  See the License for the specific language governing permissions and
- ~  limitations under the License.
-  -->
-
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
@@ -33,12 +17,11 @@
     <url>http://smallrye.io</url>
 
     <properties>
-        <version.buildhelper.plugin>3.0.0</version.buildhelper.plugin>
+        <version.buildhelper.plugin>3.1.0</version.buildhelper.plugin>
         <version.com.fasterxml.jackson>2.10.3</version.com.fasterxml.jackson>
         <version.eclipse.microprofile.config>1.4</version.eclipse.microprofile.config>
         <version.eclipse.microprofile.openapi>2.0-SNAPSHOT</version.eclipse.microprofile.openapi>
-        <version.io.smallrye.smallrye-config>1.6.2</version.io.smallrye.smallrye-config>
-        <version.jakarta.validation.api>2.0.2</version.jakarta.validation.api>
+        <version.io.smallrye.smallrye-config>1.7.0</version.io.smallrye.smallrye-config>
         <version.org.hamcrest>1.3</version.org.hamcrest>
         <version.org.hamcrest.java-hamcrest>2.0.0.0</version.org.hamcrest.java-hamcrest>
         <version.org.skyscreamer>1.5.0</version.org.skyscreamer>
@@ -67,6 +50,9 @@
     </scm>
 
     <modules>
+        <module>core</module>
+        <module>extension-jaxrs</module>
+        <module>extension-spring</module>
         <module>implementation</module>
         <module>tck</module>
     </modules>
@@ -112,14 +98,6 @@
                 <artifactId>smallrye-config</artifactId>
                 <version>${version.io.smallrye.smallrye-config}</version>
                 <scope>test</scope>
-            </dependency>
-
-            <!-- Specifications -->
-            <dependency>
-                <groupId>jakarta.validation</groupId>
-                <artifactId>jakarta.validation-api</artifactId>
-                <version>${version.jakarta.validation.api}</version>
-                <scope>provided</scope>
             </dependency>
 
             <!-- Third Party Libraries -->
@@ -171,7 +149,22 @@
 
             <!-- Dependencies provided by the project -->
             <dependency>
-                <groupId>io.smallrye</groupId>
+                <groupId>${project.groupId}</groupId>
+                <artifactId>smallrye-open-api-core</artifactId>
+                <version>${project.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>${project.groupId}</groupId>
+                <artifactId>smallrye-open-api-jaxrs</artifactId>
+                <version>${project.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>${project.groupId}</groupId>
+                <artifactId>smallrye-open-api-spring</artifactId>
+                <version>${project.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>${project.groupId}</groupId>
                 <artifactId>smallrye-open-api</artifactId>
                 <version>${project.version}</version>
             </dependency>
@@ -219,6 +212,17 @@
             <modules>
                 <module>release</module>
             </modules>
+        </profile>
+        
+        <profile>
+            <id>jdk11plus</id>
+            <activation>
+                <jdk>[11,)</jdk>
+            </activation>
+            <properties>
+                <jboss.extra.opts>--add-modules java.se</jboss.extra.opts>
+                <maven.compiler.release>8</maven.compiler.release>
+            </properties>
         </profile>
     </profiles>
 </project>
